--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <h2>Edificio Belohorizonte</h2>
                     <h4>Cra. 81c #49f-50 Apto 404</h4>
                     <hr>
-                    <table class="table table-striped p-4 mt-5 my-5">
+                    <table class="table table-striped table-responsive p-4 mt-5 my-5">
 
                         <thead class="p-4">
                             <tr class="text-center">
